Fixed layout issues

--- a/www/css/dash-layout (new).css
+++ b/www/css/dash-layout (new).css
@@ -21,7 +21,7 @@
 
 .side-panel,
 .account-edit,
-#add-toggle, #add-header, #add-form, .add-option
+.toggle-upload, .upload-header, .upload-form, .upload-option
 {
     transition: all 0.2s linear;
     -ms-transition: all 0.2s linear;
@@ -60,9 +60,9 @@
 
 /* --- FLEXBOX --- */
 .side-header, 
-.account-menu, #account-module, 
+.account-module, .account-menu,
 .edit-form,
-.add-header,
+.upload-header,
 .module-subheader
 {
     display: flex;
@@ -70,19 +70,19 @@
 
 .side-header, 
 .account-menu,
-.add-header
+.upload-header
 { 
     flex-flow: row nowrap; 
 }
 
 .edit-form,
-#account-module
+.account-module
 { 
     flex-flow: column nowrap;
 }
 
 .account-menu,
-.add-header,
+.upload-header,
 .module-subheader
 {
     justify-content: flex-end;
@@ -133,7 +133,7 @@
     padding: 10px 0px; 
     align-items: center;
 }
-.toggle-edit {
+.edit-option {
     width: 90%;
     margin: 0px auto;
     
@@ -158,13 +158,13 @@
     height: 50px; 
 }
 .upload-header.active { width: 50px; }
-.upload-toggle {
+.toggle-upload {
     width: 50px;
     height: 100%;
     
     font-size: 20px;
 }
-.upload-toggle.active {    
+.toggle-upload.active {    
     transform: rotate(45deg);
     -mz-transform: rotate(45deg);
     -moz-transform: rotate(45deg);
